feat: log lh custom events for contract agreement (#177)